kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "portfolio-static-ip"
    networking.gke.io/frontend-config: "portfolio-frontend-config"
    networking.gke.io/managed-certificates: "portfolio-managed-cert-v2"
spec:
  ingressClassName: gce
  rules:
  - host: pcurtcast.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-frontend-service
            port:
              number: 80
  - host: www.pcurtcast.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-frontend-service
            port:
              number: 80
